#2179 updates to Makefiles to get eg14 to build with nvfortran

--- a/examples/lfric/eg14/Makefile
+++ b/examples/lfric/eg14/Makefile
@@ -1,7 +1,7 @@
 # -----------------------------------------------------------------------------
 # BSD 3-Clause License
 #
-# Copyright (c) 2020-2022, Science and Technology Facilities Council.
+# Copyright (c) 2020-2023, Science and Technology Facilities Council.
 # All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
@@ -55,11 +55,12 @@ OBJ = main_psy.o main_alg.o testkern_w0_kernel_0_mod.o
 
 EXEC = example_openacc
 
-LFRIC_DIR ?= $(PSYROOT)/src/psyclone/tests/test_files/dynamo0p3/infrastructure
+LFRIC_PATH ?= $(PSYROOT)/src/psyclone/tests/test_files/dynamo0p3/infrastructure
 LFRIC_NAME=lfric
-LFRIC_LIB=$(LFRIC_DIR)/lib$(LFRIC_NAME).a
+LFRIC_LIB=$(LFRIC_PATH)/lib$(LFRIC_NAME).a
 
-F90FLAGS += -I$(LFRIC_DIR)
+# This sets up LFRIC_INCLUDE_FLAGS
+include $(LFRIC_PATH)/lfric_include_flags.inc
 
 .PHONY: transform compile run
 
@@ -77,30 +78,30 @@ transform:
 
 testkern_w0_kernel_0_mod.f90: main_psy.f90
 
-# TODO #1724 - compilation currently fails because module name in use
-# statement needs correcting following ACCRoutineTrans of Kernel.
-compile: transform
-	@echo "No compilation supported for lfric/eg14 due to #1724"
+compile: transform ${LFRIC_LIB} ${OBJ}
+	${F90} ${F90FLAGS} $(LFRIC_INCLUDE_FLAGS) $(OBJ) -o $(EXEC) -L$(LFRIC_PATH) -l$(LFRIC_NAME)
 
+$(LFRIC_LIB):
+	$(MAKE) -C $(LFRIC_PATH)
 
 run: compile
 	./$(EXEC)
 
 $(EXEC): $(LFRIC_LIB) $(OBJ)
-	$(F90) $(F90FLAGS) $(OBJ) -o $(EXEC) -L$(LFRIC_DIR) -l$(LFRIC_NAME)
+	$(F90) $(F90FLAGS) $(OBJ) -o $(EXEC) -L$(LFRIC_PATH) -l$(LFRIC_NAME)
 
 $(LFRIC_LIB):
-	$(MAKE) -C $(LFRIC_DIR)
+	$(MAKE) -C $(LFRIC_PATH)
 
 # Dependencies
 main_psy.o:	testkern_w0_kernel_0_mod.o
 main_alg.o:	main_psy.o testkern_w0_kernel_0_mod.o
 
 %.o: %.F90
-	$(F90) $(F90FLAGS) -c $<
+	$(F90) $(F90FLAGS) $(LFRIC_INCLUDE_FLAGS) -c $<
 
 %.o: %.f90
-	$(F90) $(F90FLAGS) -c $<
+	$(F90) $(F90FLAGS) $(LFRIC_INCLUDE_FLAGS) -c $<
 
 # Keep the generated psy and alg files
 .precious: main_psy.f90 main_alg.f90
@@ -108,4 +109,4 @@ main_alg.o:	main_psy.o testkern_w0_kernel_0_mod.o
 main_alg.f90: main_psy.f90
 
 allclean: clean
-	$(MAKE) -C $(LFRIC_DIR) allclean
+	$(MAKE) -C $(LFRIC_PATH) allclean
