--- a/src/psyclone/tests/test_files/dynamo0p3/infrastructure/Makefile
+++ b/src/psyclone/tests/test_files/dynamo0p3/infrastructure/Makefile
@@ -55,7 +55,9 @@ include $(LFRIC_PATH)/lfric_include_flags.inc
 
 ALL_SRC := $(subst $(LFRIC_PATH),,\
 		    $(shell find $(LFRIC_PATH) -name '*.[Ff]90' -print))
-ALL_OBJ = $(subst .F90,.o,$(subst .f90,.o,$(ALL_SRC)))
+OBJ_WITH_DUPLICATES = $(subst .F90,.o,$(subst .f90,.o,$(ALL_SRC)))
+# Remove any duplicates
+ALL_OBJ = $(sort ${OBJ_WITH_DUPLICATES})
 
 # Additional object files required for netcdf support
 OBJ_NETCDF = mesh/global_mesh_netcdf_mod.o io/ugrid_2d_mod.o     \
