--- a/.github/workflows/nemo_tests.yml
+++ b/.github/workflows/nemo_tests.yml
@@ -110,7 +110,7 @@ jobs:
         export MODEL_DIR=/archive/ssiso/ecmwf_eORCA1_GO8/
         export NAMELISTS_DIR=/home/ssiso/ecmwf_nemo/nemo/testscripts_V40/output/openmp_outer_V40_eORCA1_GO8_Z75_20170906_cray_dp_1x1/
         make -j 4 openmp_cpu
-    - name: NEMO ECMWF OpenMP for CPUs Intel Compilation
+    - name: NEMO ECMWF OpenMP for CPUs Compilation - Intel Compiler
       run: |
         . .runner_venv/bin/activate
         cd examples/NEMO/scripts
@@ -126,15 +126,14 @@ jobs:
         export MODEL_DIR=/archive/ssiso/ecmwf_eORCA1_GO8/
         export NAMELISTS_DIR=/home/ssiso/ecmwf_nemo/nemo/testscripts_V40/output/openmp_outer_V40_eORCA1_GO8_Z75_20170906_cray_dp_1x1/
         make -j 4 compile-openmp_cpu
-    - name: NEMO MetOffice OpenMP for Nvidia GPU Execution
+    - name: NEMO ECMWF OpenMP for CPU Execution - Intel compiler
       run: |
         . .runner_venv/bin/activate
-        module load nvidia-hpcsdk netcdf_fortran
         cd examples/NEMO/scripts
         module load intel/oneapi compiler mpi
-        export LD_LIBRARY_PATH=/home/ssiso/ecmwf_nemo/ESiWACE2/scripts/dev/netcdf-c-4.9.0/lib/:$LD_LIBRARY_PATH
-        export LD_LIBRARY_PATH=home/ssiso/ecmwf_nemo/ESiWACE2/scripts/dev/netcdf-fortran-4.5.4/lib:$LD_LIBRARY_PATH
-        export LD_LIBRARY_PATH=/home/ssiso/ecmwf_nemo/ESiWACE2/scripts/dev/hdf5-1.12.2/lib/:$LD_LIBRARY_PATH:$LD_LIBRARY_PATH
+        export LD_LIBRARY_PATH=/home/ssiso/ecmwf_nemo/ESiWACE2/scripts/dev/netcdf-c-4.9.0/lib:$LD_LIBRARY_PATH
+        export LD_LIBRARY_PATH=/home/ssiso/ecmwf_nemo/ESiWACE2/scripts/dev/netcdf-fortran-4.5.4/lib:$LD_LIBRARY_PATH
+        export LD_LIBRARY_PATH=/home/ssiso/ecmwf_nemo/ESiWACE2/scripts/dev/hdf5-1.12.2/lib:$LD_LIBRARY_PATH
         export NEMO_DIR=/home/ssiso/ecmwf_nemo/nemo/NEMOGCM_V40/
         export ROOT_SRC=/home/ssiso/ecmwf_nemo/nemo/NEMOGCM_V40/cfgs/SPITZ12_serial/BLD/ppsrc/nemo/
         export COMPILER_ARCH=linux_intel
