--- a/.github/workflows/nemo_tests.yml
+++ b/.github/workflows/nemo_tests.yml
@@ -79,30 +79,17 @@ jobs:
         echo "/home/aporter/perl5/bin" >> $GITHUB_PATH
 
     # PSyclone, compile and run MetOffice NEMO with OpenMP for GPUs
-    - name: NEMO MetOffice OpenMP for GPU PSycloning
+    - name: NEMO MetOffice OpenMP for GPU
       env:
           NEMO_DIR: $HOME/NEMO
       run: |
         . .runner_venv/bin/activate
         module load nvidia-hpcsdk netcdf_fortran
         cd examples/nemo/scripts
+        echo "${NEMO_DIR}"
+        echo "${PSYCLONE_NEMO_DIR}"
         make -j 4 openmp_gpu
-    - name: NEMO MetOffice OpenMP for Nvidia GPUs Compilation
-      env:
-          NEMO_DIR: $HOME/NEMO
-      run: |
-        . .runner_venv/bin/activate
-        which nvfortran # is if here from previous step?
-        module load nvidia-hpcsdk netcdf_fortran
-        cd examples/nemo/scripts
         make -j 4 compile-openmp_gpu
-    - name: NEMO MetOffice OpenMP for Nvidia GPU Execution
-      env:
-          NEMO_DIR: $HOME/NEMO
-      run: |
-        . .runner_venv/bin/activate
-        module load nvidia-hpcsdk netcdf_fortran
-        cd examples/nemo/scripts
         export NV_ACC_POOL_THRESHOLD=75
         make run-openmp_gpu | tee output.txt
         # Check the output is as expected for the first 6 digits
@@ -114,49 +101,23 @@ jobs:
         grep -A 1 "Elapsed Time" output.txt
 
     # PSyclone, compile and run ECMWF NEMO with OpenMP for CPUs
-    - name: NEMO ECMWF OpenMP for CPU PSycloning
+    - name: NEMO ECMWF OpenMP for CPU
+      env:
+        NEMO_DIR: /home/ssiso/ecmwf_nemo/nemo/NEMOGCM_V40/
+        COMPILER_ARCH: linux_intel
+        ADD_KEYS: "IEEE_IS_NAN=ieee_is_nan key_nosignedzero"
+        DEL_KEYS: "key_iomput"
+        MODEL_DIR: /archive/ssiso/ecmwf_eORCA1_GO8/
+        NAMELISTS_DIR: /home/ssiso/ecmwf_nemo/nemo/testscripts_V40/output/openmp_outer_V40_eORCA1_GO8_Z75_20170906_cray_dp_1x1/
       run: |
         . .runner_venv/bin/activate
         cd examples/nemo/scripts
-        export NEMO_DIR=/home/ssiso/ecmwf_nemo/nemo/NEMOGCM_V40/
-        export ROOT_SRC=/home/ssiso/ecmwf_nemo/nemo/NEMOGCM_V40/cfgs/SPITZ12_serial/BLD/ppsrc/nemo/
-        export COMPILER_ARCH=linux_intel
-        export ADD_KEYS="IEEE_IS_NAN=ieee_is_nan key_nosignedzero"
-        export DEL_KEYS="key_iomput"
-        export MODEL_DIR=/archive/ssiso/ecmwf_eORCA1_GO8/
-        export NAMELISTS_DIR=/home/ssiso/ecmwf_nemo/nemo/testscripts_V40/output/openmp_outer_V40_eORCA1_GO8_Z75_20170906_cray_dp_1x1/
         make -j 4 openmp_cpu
-    - name: NEMO ECMWF OpenMP for CPUs Compilation - Intel Compiler
-      run: |
-        . .runner_venv/bin/activate
-        cd examples/nemo/scripts
         module load intel/oneapi compiler mpi
         export LD_LIBRARY_PATH=/home/ssiso/ecmwf_nemo/ESiWACE2/scripts/dev/netcdf-c-4.9.0/lib/:$LD_LIBRARY_PATH
         export LD_LIBRARY_PATH=home/ssiso/ecmwf_nemo/ESiWACE2/scripts/dev/netcdf-fortran-4.5.4/lib:$LD_LIBRARY_PATH
         export LD_LIBRARY_PATH=/home/ssiso/ecmwf_nemo/ESiWACE2/scripts/dev/hdf5-1.12.2/lib/:$LD_LIBRARY_PATH:$LD_LIBRARY_PATH
-        export NEMO_DIR=/home/ssiso/ecmwf_nemo/nemo/NEMOGCM_V40/
-        export ROOT_SRC=/home/ssiso/ecmwf_nemo/nemo/NEMOGCM_V40/cfgs/SPITZ12_serial/BLD/ppsrc/nemo/
-        export COMPILER_ARCH=linux_intel
-        export ADD_KEYS="IEEE_IS_NAN=ieee_is_nan key_nosignedzero"
-        export DEL_KEYS="key_iomput"
-        export MODEL_DIR=/archive/ssiso/ecmwf_eORCA1_GO8/
-        export NAMELISTS_DIR=/home/ssiso/ecmwf_nemo/nemo/testscripts_V40/output/openmp_outer_V40_eORCA1_GO8_Z75_20170906_cray_dp_1x1/
         make -j 4 compile-openmp_cpu
-    - name: NEMO ECMWF OpenMP for CPU Execution - Intel compiler
-      run: |
-        . .runner_venv/bin/activate
-        cd examples/nemo/scripts
-        module load intel/oneapi compiler mpi
-        export LD_LIBRARY_PATH=/home/ssiso/ecmwf_nemo/ESiWACE2/scripts/dev/netcdf-c-4.9.0/lib:$LD_LIBRARY_PATH
-        export LD_LIBRARY_PATH=/home/ssiso/ecmwf_nemo/ESiWACE2/scripts/dev/netcdf-fortran-4.5.4/lib:$LD_LIBRARY_PATH
-        export LD_LIBRARY_PATH=/home/ssiso/ecmwf_nemo/ESiWACE2/scripts/dev/hdf5-1.12.2/lib:$LD_LIBRARY_PATH
-        export NEMO_DIR=/home/ssiso/ecmwf_nemo/nemo/NEMOGCM_V40/
-        export ROOT_SRC=/home/ssiso/ecmwf_nemo/nemo/NEMOGCM_V40/cfgs/SPITZ12_serial/BLD/ppsrc/nemo/
-        export COMPILER_ARCH=linux_intel
-        export ADD_KEYS="IEEE_IS_NAN=ieee_is_nan key_nosignedzero"
-        export DEL_KEYS="key_iomput"
-        export MODEL_DIR=/archive/ssiso/ecmwf_eORCA1_GO8/
-        export NAMELISTS_DIR=/home/ssiso/ecmwf_nemo/nemo/testscripts_V40/output/openmp_outer_V40_eORCA1_GO8_Z75_20170906_cray_dp_1x1/
         export OMP_NUM_THREADS=4
         make run-openmp_cpu | tee output.txt
         # Check the output is as expected for the first 6 digits
