--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -77,20 +77,32 @@ jobs:
         # uncomment the following line:
         pip install external/fparser
         pip install .[test]
-    - name: Test with pytest and compilation
+    - name: Unit tests with compilation - gfortran
       run: |
         module load python/3.11.3
         . .runner_venv/bin/activate
         pytest -n 2 --f90=gfortran --compile --compileopencl src/psyclone/tests
         module load nvidia-hpcsdk/23.5 netcdf_fortran
-        # We have to tell nvfortran where to find the OpenCL library.
-        pytest -n 2 --f90=nvfortran --f90flags="-L/apps/packages/compilers/nvidia-hpcsdk/Linux_x86_64/23.5/cuda/12.1/targets/x86_64-linux/lib" --compile --compileopencl src/psyclone/tests
-        module rm netcdf_fortran nvidia-hpcsdk
-    - name: Examples with compilation
+    - name: Unit tests with compilation - nvfortran
       run: |
         module load python/3.11.3
         . .runner_venv/bin/activate
-        F90=gfortran F90FLAGS="" make -C examples compile
+        module load nvidia-hpcsdk/23.5 netcdf_fortran
+        # We have to tell nvfortran where to find the OpenCL library.
+        pytest -n 2 --f90=nvfortran --f90flags="-L/apps/packages/compilers/nvidia-hpcsdk/Linux_x86_64/23.5/cuda/12.1/targets/x86_64-linux/lib" --compile --compileopencl src/psyclone/tests
+        module rm netcdf_fortran nvidia-hpcsdk
+    - name: Examples with compilation - gfortran
+      run: |
+        module load python/3.11.3
+        . .runner_venv/bin/activate
+        # Although we're using gfortran, we link with the OpenCL lib that comes
+        # with CUDA.
+        make -C examples allclean
+        F90=gfortran F90FLAGS="-L/apps/packages/compilers/nvidia-hpcsdk/Linux_x86_64/23.5/cuda/12.1/targets/x86_64-linux/lib" make -C examples compile
+    - name: Examples with compilation - nvfortran
+      run: |
+        module load python/3.11.3
+        . .runner_venv/bin/activate
         make -C examples allclean
         module load nvidia-hpcsdk/23.5 netcdf_fortran
         # We have to tell nvfortran where to find the OpenCL library.
