--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -76,7 +76,7 @@ jobs:
         # submodule instead of the released version (from PyPI) then
         # uncomment the following line:
         pip install external/fparser
-        pip install .[test]
+        pip install .[test,psydata]
     - name: Unit tests with compilation - gfortran
       run: |
         module load python/3.11.3
