--- a/.github/workflows/compilation.yml
+++ b/.github/workflows/compilation.yml
@@ -81,8 +81,9 @@ jobs:
       run: |
         module load python/3.11.3
         . .runner_venv/bin/activate
+        module load gcc/13.1.0 openmpi netcdf_fortran
         pytest -n 2 --f90=gfortran --compile --compileopencl src/psyclone/tests
-        module load nvidia-hpcsdk/23.5 netcdf_fortran
+        module rm netcdf_fortran gcc
     - name: Unit tests with compilation - nvfortran
       run: |
         module load python/3.11.3
@@ -95,6 +96,7 @@ jobs:
       run: |
         module load python/3.11.3
         . .runner_venv/bin/activate
+        module load gcc/13.1.0 openmpi netcdf_fortran
         # Although we're using gfortran, we link with the OpenCL lib that comes
         # with CUDA.
         make -C examples allclean
