#2132 Add LFRic integration test workflow

--- a/config/psyclone.cfg
+++ b/config/psyclone.cfg
@@ -63,7 +63,7 @@ access_mapping = gh_read: read, gh_write: write, gh_readwrite: readwrite,
 # that it iterates over dofs. This is currently only the case for
 # builtins. If annexed dofs are computed then in certain cases we
 # remove the need for a halo exchange call.
-COMPUTE_ANNEXED_DOFS = false
+COMPUTE_ANNEXED_DOFS = true
 
 # Specify supported Fortran datatypes
 supported_fortran_datatypes = real, integer, logical
@@ -76,7 +76,7 @@ RUN_TIME_CHECKS = false
 
 # Number of ANY_SPACE and ANY_DISCONTINUOUS_SPACE function spaces
 NUM_ANY_SPACE = 10
-NUM_ANY_DISCONTINUOUS_SPACE = 10
+NUM_ANY_DISCONTINUOUS_SPACE = 20
 
 # Settings specific to the Gocean 1.0 API
 # =======================================
