PR #2172: Changes for review

--- a/tutorial/practicals/LFRic/building_code/1_simple_kernels/part2/solutions/Makefile
+++ b/tutorial/practicals/LFRic/building_code/1_simple_kernels/part2/solutions/Makefile
@@ -58,8 +58,8 @@ EXEC = ./simple_kernels_part2
 # LFRic infrastructure library
 PSYCLONE_RELPATH = ../../../../../../..
 LFRIC_PATH = $(PSYCLONE_RELPATH)/src/psyclone/tests/test_files/dynamo0p3/infrastructure
-LFRIC_NAME=lfric
-LFRIC_LIB=$(LFRIC_PATH)/lib$(LFRIC_NAME).a
+LFRIC_NAME = lfric
+LFRIC_LIB = $(LFRIC_PATH)/lib$(LFRIC_NAME).a
 
 # This will add the required include flags to LFRIC_INCLUDE_FLAGS
 include $(LFRIC_PATH)/lfric_include_flags.inc
@@ -92,9 +92,9 @@ $(LFRIC_LIB):
 	$(MAKE) -C $(LFRIC_PATH)
 
 # Dependencies
-$(DRIVER_OBJ): $(ALGORITHM_OBJ) $(PSY_OBJ) $(KERNEL_OBJ) $(LFRIC_LIB)
-$(ALGORITHM_OBJ): $(PSY_OBJ) $(KERNEL_OBJ) $(LFRIC_LIB)
-$(PSY_OBJ): $(KERNEL_OBJ) $(LFRIC_LIB)
+$(DRIVER_OBJ): $(ALGORITHM_OBJ) $(PSY_OBJ) $(KERNEL_OBJ)
+$(ALGORITHM_OBJ): $(PSY_OBJ) $(KERNEL_OBJ)
+$(PSY_OBJ): $(KERNEL_OBJ)
 $(KERNEL_OBJ): $(LFRIC_LIB)
 
 %.o %.mod: %.F90
