--- a/tutorial/practicals/LFRic/building_code/2_built_ins/Makefile
+++ b/tutorial/practicals/LFRic/building_code/2_built_ins/Makefile
@@ -53,8 +53,8 @@ EXEC = ./builtins
 # LFRic infrastructure library
 PSYCLONE_RELPATH = ../../../../..
 LFRIC_PATH = $(PSYCLONE_RELPATH)/src/psyclone/tests/test_files/dynamo0p3/infrastructure
-LFRIC_NAME=lfric
-LFRIC_LIB=$(LFRIC_PATH)/lib$(LFRIC_NAME).a
+LFRIC_NAME = lfric
+LFRIC_LIB = $(LFRIC_PATH)/lib$(LFRIC_NAME).a
 
 # This will add the required include flags to LFRIC_INCLUDE_FLAGS
 include $(LFRIC_PATH)/lfric_include_flags.inc
@@ -86,8 +86,8 @@ $(LFRIC_LIB):
 	$(MAKE) -C $(LFRIC_PATH)
 
 # Dependencies
-$(DRIVER_OBJ): $(ALGORITHM_OBJ) $(PSY_OBJ) $(LFRIC_LIB)
-$(ALGORITHM_OBJ): $(PSY_OBJ) $(LFRIC_LIB)
+$(DRIVER_OBJ): $(ALGORITHM_OBJ) $(PSY_OBJ)
+$(ALGORITHM_OBJ): $(PSY_OBJ)
 $(PSY_OBJ): $(LFRIC_LIB)
 
 %.o %.mod: %.F90
